--- a/app/src/main/res/layout/about_biyeta.xml
+++ b/app/src/main/res/layout/about_biyeta.xml
@@ -168,6 +168,7 @@
             android:text="@string/about_parag9"
             android:layout_marginTop="20dp"
             android:textSize="@dimen/textSize_about_parag"
+            android:autoLink="email"
             android:textColor="@color/about_parag"/>
         <TextView
             android:id="@+id/about_parag10"
