--- a/app/src/main/res/layout/faq.xml
+++ b/app/src/main/res/layout/faq.xml
@@ -34,6 +34,7 @@
         android:paddingLeft="5dp"
         android:layout_marginBottom="15dp"
         android:text="@string/faq_foot"
-        android:textColor="#000" />
+        android:textColor="#000"
+        android:autoLink="email"/>
 
 </RelativeLayout>
