--- a/app/src/main/res/layout/about_biyeta.xml
+++ b/app/src/main/res/layout/about_biyeta.xml
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_parag1"
-            android:textSize="@dimen/textSize_about_parag"
+            android:textSize="24sp"
+             android:textStyle="bold"
             android:textColor="@color/about_parag"/>
 
         <TextView
@@ -24,136 +25,77 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_parag2"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="2dp"
             android:textSize="@dimen/textSize_about_parag"
             android:textColor="@color/about_parag"/>
 
-        <TextView
-            android:id="@+id/about_bullet1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bullet_ponit_about"
-            android:textSize="@dimen/testSize_about_bullet"
-            android:textColor="@color/about_bullet"
-            android:layout_below="@id/about_parag2"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="@dimen/margin_about_bullet"
-            />
+        <!--<TextView-->
+            <!--android:id="@+id/about_bullet1"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/bullet_ponit_about"-->
+            <!--android:textSize="@dimen/testSize_about_bullet"-->
+            <!--android:textColor="@color/about_bullet"-->
+            <!--android:layout_below="@id/about_parag2"-->
+            <!--android:layout_marginTop="15dp"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:layout_marginLeft="@dimen/margin_about_bullet"-->
+            <!--/>-->
         <TextView
             android:id="@+id/about_parag3"
             android:layout_below="@id/about_parag2"
-            android:layout_toRightOf="@id/about_bullet1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_parag3"
             android:layout_marginTop="20dp"
-            android:textSize="@dimen/textSize_about_parag"
+            android:textSize="24sp"
+            android:textStyle="bold"
             android:textColor="@color/about_parag"/>
-        <TextView
-            android:id="@+id/about_bullet2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bullet_ponit_about"
-            android:textSize="@dimen/testSize_about_bullet"
-            android:textColor="@color/about_bullet"
-            android:layout_below="@id/about_parag3"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="@dimen/margin_about_bullet"
-            />
+
         <TextView
             android:id="@+id/about_parag4"
             android:layout_below="@id/about_parag3"
-            android:layout_toRightOf="@id/about_bullet2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_parag4"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="2dp"
             android:textSize="@dimen/textSize_about_parag"
             android:textColor="@color/about_parag"/>
-        <TextView
-            android:id="@+id/about_bullet3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bullet_ponit_about"
-            android:textSize="@dimen/testSize_about_bullet"
-            android:textColor="@color/about_bullet"
-            android:layout_below="@id/about_parag4"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="@dimen/margin_about_bullet"
-            />
+
         <TextView
             android:id="@+id/about_parag5"
             android:layout_below="@id/about_parag4"
-            android:layout_toRightOf="@id/about_bullet3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_parag5"
             android:layout_marginTop="20dp"
             android:textSize="@dimen/textSize_about_parag"
             android:textColor="@color/about_parag"/>
-        <TextView
-            android:id="@+id/about_bullet4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bullet_ponit_about"
-            android:textSize="@dimen/testSize_about_bullet"
-            android:textColor="@color/about_bullet"
-            android:layout_below="@id/about_parag5"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="@dimen/margin_about_bullet"
-            />
+
         <TextView
             android:id="@+id/about_parag6"
             android:layout_below="@id/about_parag5"
-            android:layout_toRightOf="@id/about_bullet4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_parag6"
             android:layout_marginTop="20dp"
-            android:textSize="@dimen/textSize_about_parag"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:textColor="@color/about_parag"/>
-        <TextView
-            android:id="@+id/about_bullet5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bullet_ponit_about"
-            android:textSize="@dimen/testSize_about_bullet"
-            android:textColor="@color/about_bullet"
-            android:layout_below="@id/about_parag6"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="@dimen/margin_about_bullet"
-            />
+
         <TextView
             android:id="@+id/about_parag7"
             android:layout_below="@id/about_parag6"
-            android:layout_toRightOf="@id/about_bullet5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_parag7"
             android:layout_marginTop="20dp"
             android:textSize="@dimen/textSize_about_parag"
             android:textColor="@color/about_parag"/>
-        <TextView
-            android:id="@+id/about_bullet6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bullet_ponit_about"
-            android:textSize="@dimen/testSize_about_bullet"
-            android:textColor="@color/about_bullet"
-            android:layout_below="@id/about_parag7"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="@dimen/margin_about_bullet"
-            />
+
         <TextView
             android:id="@+id/about_parag8"
             android:layout_below="@id/about_parag7"
-            android:layout_toRightOf="@id/about_bullet6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_parag8"
@@ -167,8 +109,8 @@
             android:layout_height="wrap_content"
             android:text="@string/about_parag9"
             android:layout_marginTop="20dp"
-            android:textSize="@dimen/textSize_about_parag"
-            android:autoLink="email"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:textColor="@color/about_parag"/>
         <TextView
             android:id="@+id/about_parag10"
