--- a/app/src/main/res/layout/list_item_faq.xml
+++ b/app/src/main/res/layout/list_item_faq.xml
@@ -14,7 +14,8 @@
         android:text="@string/bullet_point"
         android:textColor="@android:color/black"
         android:textSize="10sp"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        />
 
     <TextView
         android:id="@+id/expandedListItem"
@@ -25,6 +26,7 @@
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
+        android:autoLink="web"
         android:textColor="@android:color/black" />
 
 </RelativeLayout>
