--- a/app/src/main/res/layout/activity_selected_image.xml
+++ b/app/src/main/res/layout/activity_selected_image.xml
@@ -8,8 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#FFECB3"
-    tools:context="com.android_examples.cropimage_android_examplescom.MainActivity">
+    android:background="#FFECB3">
 
     <ImageView
         android:layout_width="250dp"
