--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -7,24 +7,28 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/profile_item_cardview_height"
-        android:layout_marginBottom="@dimen/small_margin">
+        android:layout_height="@dimen/profile_item_cardview_height">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/profile_item_cardview_height"
-            android:layout_marginBottom="@dimen/most_small_margin"
             android:orientation="horizontal"
             android:weightSum="5">
 
-            <ImageView
-                android:id="@+id/profile_image"
+            <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:padding="@dimen/medium_padding"
-                android:scaleType="fitXY"
-                 />
+                android:layout_weight="1.5">
+                <ImageView
+                    android:id="@+id/profile_back"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/black"/>
+                <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -61,9 +65,6 @@
 
     </android.support.v7.widget.CardView>
 
-    <LinearLayout
 
-        android:layout_width="match_parent"
-        android:layout_height="3dp"></LinearLayout>
 
 </LinearLayout>
