--- a/app/src/main/res/layout/activity_facebook_registration_data_input.xml
+++ b/app/src/main/res/layout/activity_facebook_registration_data_input.xml
@@ -1,24 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:isScrollContainer="false">
+    android:isScrollContainer="false"
+    android:background="#EAEBED">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:facebook="http://schemas.android.com/tools"
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:id="@+id/appbar_layout">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:clipToPadding="false"
+            app:contentInsetEnd="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp"
+            app:layout_collapseMode="pin"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:background="@color/white">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                 android:padding="@dimen/small_padding">
+
+
+                <ImageView
+                    android:id="@+id/backPreviousActivityImage"
+                    android:layout_width="@dimen/small_image_size"
+                    android:layout_height="@dimen/small_image_size"
+                    android:onClick="backBtnAction"
+                    android:src="@drawable/red_back_arrow"
+                    android:layout_gravity="left"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true"/>
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:lines="2"
+                    android:text="ফেইসবুক রেজিস্ট্রেশন "
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/medium_textsize"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="56dp"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:background="@color/white"-->
+        <!--android:clipToPadding="false">-->
+
+
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:gravity="center"-->
+            <!--android:padding="@dimen/small_padding">-->
+
+
+            <!--<ImageView-->
+                <!--android:id="@+id/backPreviousActivityImage"-->
+                <!--android:layout_width="@dimen/small_image_size"-->
+                <!--android:layout_height="@dimen/small_image_size"-->
+                <!--android:layout_alignParentLeft="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:onClick="backBtnAction"-->
+                <!--android:src="@drawable/red_back_arrow" />-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/own_info"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:gravity="center"-->
+                <!--android:lines="2"-->
+                <!--android:text="ফেইসবুক রেজিস্ট্রেশন "-->
+                <!--android:textColor="@color/colorPrimary"-->
+                <!--android:textSize="@dimen/medium_textsize"-->
+                <!--android:textStyle="bold"-->
+                <!--android:background="@color/white"/>-->
+
+
+            <!--<ImageView-->
+                <!--android:id="@+id/likeImage"-->
+                <!--android:layout_width="@dimen/small_image_size"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_marginRight="@dimen/small_margin"-->
+                <!--android:src="@drawable/grey_fav"-->
+                <!--android:visibility="invisible" />-->
+
+
+        <!--</RelativeLayout>-->
+
+    <!--</android.support.v7.widget.Toolbar>-->
+
+    <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/appbar_layout">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/activity_main"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/accountrecharge_backGround_color"
             android:orientation="vertical"
             android:weightSum="10">
+
+            <TextView
+                android:id="@+id/find_text"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_below="@+id/imageview"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight=".7"
+                android:text="খুঁজছি"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:id="@+id/button"
@@ -32,6 +155,29 @@
                 android:orientation="horizontal"
                 android:weightSum="2">
 
+                <Button
+                    android:id="@+id/man"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_gravity="left"
+                    android:layout_marginRight="15dp"
+                    android:layout_weight="1"
+                    android:background="@color/tab_background_unselected"
+                    android:text="পাত্র"
+                    android:textColor="@color/back_varify_text_view_1"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/woman"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
+                    android:background="@color/tab_background_unselected"
+                    android:text="পাত্রী"
+                    android:textColor="@color/back_varify_text_view_1"
+                    android:textSize="20sp" />
             </LinearLayout>
 
             <EditText
@@ -43,29 +189,29 @@
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:hint="ইমেইল"
-                android:textColor="@color/lblFromName"
-                android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="10sp"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="@color/lblFromName" />
 
             <EditText
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_below="@id/password"
+                android:layout_below="@+id/password"
                 android:layout_margin="10dp"
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:hint="নাম"
-                android:textColor="@color/lblFromName"
-                android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionNext"
                 android:inputType="text"
-                android:privateImeOptions="nm"
                 android:paddingLeft="10sp"
-                android:singleLine="true" />
+                android:privateImeOptions="nm"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="@color/lblFromName" />
 
             <EditText
                 android:id="@+id/display_name"
@@ -76,12 +222,12 @@
                 android:layout_weight=".8"
                 android:background="@color/white"
                 android:hint="ডিসপ্লে নাম"
-                android:textColor="@color/black"
-                android:textColorHint="@color/lblFromName"
                 android:inputType="text"
                 android:paddingLeft="10sp"
                 android:privateImeOptions="nm"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="@color/lblFromName" />
 
             <EditText
                 android:id="@+id/date_Of_birth_editext"
@@ -92,34 +238,44 @@
                 android:layout_weight=".8"
                 android:background="@color/white"
                 android:hint="জন্ম তারিখ"
-                android:textColor="@color/black"
-                android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionDone"
                 android:inputType="text"
                 android:paddingLeft="10sp"
                 android:privateImeOptions="nm"
                 android:singleLine="true"
-                />
+                android:textColor="@color/black"
+                android:textColorHint="@color/lblFromName" />
 
-            <!-- <net.rimoto.intlphoneinput.IntlPhoneInput
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_alignLeft="@+id/numbervarifytextView1"
-                 android:layout_alignRight="@+id/numbervarifytextView1"
-                 android:background="@color/back_verifycode_edittext1"
-                 android:layout_marginTop="15dp"
-                 app:textSize="14sp"
-                 app:textColor="#000000"
-                 app:flagPaddingEnd="4dp"
-                 app:flagPaddingStart="4dp"
-                 app:flagPaddingTop="4dp"
-                 app:flagPaddingBottom="4dp"
-                 android:layout_marginLeft="10dp"
-                 android:layout_marginRight="10dp"
-                 android:id="@+id/my_phone_input"
-                 android:padding="5dp"
-                 android:layout_centerHorizontal="true"
-                 android:layout_below="@id/numbervarifytextView1"/>-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/date_Of_birth_editext"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/terms_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="-2dp"
+                    android:textColor="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/terms_text1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="17sp" />
+
+                <TextView
+                    android:id="@+id/terms_text2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" আমি পড়েছি এবং সম্মত হয়েছি"
+                    android:textColor="@color/black"
+                    android:textSize="17sp" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/register_button"
@@ -132,16 +288,6 @@
                 android:text="রেজিস্ট্রেশন করুন"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:height="1dp"
-                android:background="#A9A9A9" />
-
-
         </LinearLayout>
     </ScrollView>
-
-
 </RelativeLayout>
