--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -7,9 +7,7 @@
     android:layout_height="match_parent"
     android:background="#EAEBED"
     android:orientation="horizontal"
-    android:weightSum="2"
-
-    >
+    android:weightSum="2">
 
     <LinearLayout
         android:layout_width="0dip"
@@ -22,7 +20,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1.6"
         android:orientation="vertical"
-        android:weightSum="10">
+        android:weightSum="11.4">
 
 
         <LinearLayout
@@ -61,12 +59,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#ffffff"
-                    android:gravity="center"
+                    android:gravity="left|center"
                     android:hint="@string/email"
                     android:imeOptions="actionNext"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:nextFocusForward="@+id/login_password" />
+                    android:nextFocusForward="@+id/login_password"
+                    android:paddingLeft="@dimen/medium_padding"/>
             </android.support.v7.widget.CardView>
 
 
@@ -90,13 +89,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#ffffff"
-                    android:gravity="center"
+                    android:gravity="left|center"
                     android:hint="@string/password"
+                    android:paddingLeft="@dimen/medium_padding"
                     android:inputType="textPassword" />
             </android.support.v7.widget.CardView>
 
 
         </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/tv_forgot"
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_weight="1.2"
+            android:gravity="left|center"
+            android:paddingLeft="@dimen/small_padding"
+            android:text="@string/forgot_pass"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -133,9 +146,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="15dp"
-            android:layout_weight="1.1"
-
-            >
+            android:layout_weight="1.3"
+            android:weightSum="2">
 
             <!--<ImageView-->
             <!--android:layout_width="0dip"-->
@@ -162,10 +174,11 @@
             xmlns:fb="http://schemas.android.com/apk/res-auto"
             android:id="@+id/login_button"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             android:paddingBottom="15dp"
-            android:paddingTop="15dp" />
+            android:paddingTop="15dp"
+            android:layout_weight="2"/>
 
 
     </LinearLayout>
@@ -174,15 +187,17 @@
         android:id="@+id/new_accunt_test"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1.2"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="2"
+        android:layout_gravity="center"
+        android:gravity="center">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-
             android:layout_weight="2"
             android:gravity="center"
             android:text="@string/new_account"
