--- a/app/src/main/res/layout/list_profile_details_parent_item.xml
+++ b/app/src/main/res/layout/list_profile_details_parent_item.xml
@@ -29,16 +29,16 @@
             android:layout_alignParentTop="true"
             android:gravity="center">
 
-
             <TextView
                 android:id="@+id/parentListItemTitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/medium_margin"
+                android:layout_marginLeft="@dimen/small_padding"
                 android:gravity="center"
-                android:padding="@dimen/medium_padding"
+                android:paddingTop="@dimen/medium_padding"
+                android:paddingBottom="@dimen/medium_padding"
                 android:text=""
                 android:textColor="#F44336"
                 android:textSize="@dimen/item_textsize"
@@ -60,7 +60,6 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginRight="@dimen/medium_margin"
                 android:padding="@dimen/medium_padding"
                 android:src="@drawable/down_arrow" />
 
