--- a/app/src/main/res/layout/activity_facebook_registration_data_input.xml
+++ b/app/src/main/res/layout/activity_facebook_registration_data_input.xml
@@ -47,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:lines="2"
-                    android:text="ফেইসবুক রেজিস্ট্রেশন "
+                    android:text="ফেসবুক রেজিস্ট্রেশন "
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:gravity="center"
