--- a/app/src/main/res/layout/activity_pop_up_personal_info.xml
+++ b/app/src/main/res/layout/activity_pop_up_personal_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -11,7 +11,6 @@
         android:orientation="horizontal">
 
         <TextView
-
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
@@ -32,17 +31,53 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/Level"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:orientation="horizontal">
 
         <NumberPicker
             android:id="@+id/picker"
             android:layout_width="wrap_content"
             android:layout_height="180dp"
             android:layout_margin="10dp"
-            android:layout_weight="1"
             android:descendantFocusability="blocksDescendants" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ln_disable_desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Level"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/disable_desc"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:hint="প্রতিবন্ধকতা সম্পর্কে কিছু বলুন(ঐচ্ছিক)"
+            android:textColor="@color/black"
+            android:padding="10dp"
+            android:textColorHint="@color/lblFromName"
+            android:maxLines="5"
+            android:gravity="top"
+            android:maxLength="300"
+            android:visibility="visible"
+            android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/limit_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="সর্বনিম্ন: ০, সর্বোচ্চ: ৩০০"
+            android:textSize="12sp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:gravity="right"
+            android:visibility="visible"/>
     </LinearLayout>
 
     <LinearLayout
@@ -74,4 +109,4 @@
             android:text="@string/registration_accept_btn_text"
             android:textColor="#FFFFFF" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
