parents, brother, education information edit

--- a/app/src/main/res/layout/activity_own_user_profile_layout.xml
+++ b/app/src/main/res/layout/activity_own_user_profile_layout.xml
@@ -376,7 +376,7 @@
                             android:background="@color/white"/>
 
                         <ImageView
-                            android:id="@+id/img_edit"
+                            android:id="@+id/img_edit_details"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_margin="5dp"
