--- a/app/src/main/res/layout/activity_own_user_profile_layout.xml
+++ b/app/src/main/res/layout/activity_own_user_profile_layout.xml
@@ -373,6 +373,7 @@
                             android:textColor="#000000"
                             android:textSize="@dimen/item_textsize"
                             android:textStyle="normal"
+                            android:enabled="false"
                             android:background="@color/white"/>
 
                         <ImageView
@@ -441,7 +442,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/medium_margin"
-
                         android:background="#FFFFFF">
 
                         <android.support.v7.widget.RecyclerView
@@ -573,6 +573,23 @@
                             android:visibility="visible" />
 
 
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/communication_cardview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/medium_margin"
+                        android:background="#FFFFFF">
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/communication_recylerView"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="@dimen/small_margin"
+                            android:layout_marginRight="@dimen/small_margin"
+                            android:scrollbars="vertical"
+                            android:visibility="visible" />
                     </android.support.v7.widget.CardView>
 
 
